# cmake_homework

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  main.cpp
A/: script.py
